IMPALA-5412 Fix scan result with partitions on same file

The GetFileDesc function in hdsf-scan-node-base is changed
to recieve a partition ID alongside the existing filename
parameter. This change is reflected in lzo too.

Change-Id: I5e56f73acf5d584f9c641ebc867f2e244ea216a1